# sudoku-solver

./: README.md  main.py  pyproject.toml  test.py
src/PHONOS_Solver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sudoku_solver/: solver.py
