[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PHONOS_Solver"
version = "0.0.1"
authors = [
  { name="PhilZPhaZ" },
]
description = "A simple Sudoku solver with a GUI"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]